// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ProgressStep /> > should match the snapshot for 8 items 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="SliderProgress_root__17uw35s0"
    style="grid-template-columns: repeat(8, 1fr);"
  >
    <div
      class="reset_block__1oah0224 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_passed__15qfq7e6"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_block__1oah0224 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_block__1oah0224 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_block__1oah0224 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_block__1oah0224 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_block__1oah0224 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_block__1oah0224 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_block__1oah0224 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_white__3xgq1lfb ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
  </div>
</div>
`;

exports[`<ProgressStep /> > should match the snapshot with custom background 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="SliderProgress_root__17uw35s0"
    style="grid-template-columns: repeat(3, 1fr);"
  >
    <div
      class="reset_block__1oah0224 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_passed__15qfq7e6"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_block__1oah0224 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="reset_block__1oah0224 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
    >
      <div
        class="reset_block__1oah0224 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="reset_block__1oah0224 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
  </div>
</div>
`;
